# agent-mem

./: gel.toml  pyproject.toml
dbschema/: default.gel
dbschema/migrations/: 00001-m1d3qol.edgeql  00001-m1ic2li.edgeql  00002-m14ulwm.edgeql  00002-m1vyz7g.edgeql  00003-m1e3bij.edgeql  00003-m1nwe3h.edgeql  00004-m1olctg.edgeql  00004-m1y7rto.edgeql  00005-m1ljqpt.edgeql  00005-m1qeidl.edgeql  00006-m16jnrc.edgeql  00006-m17zhfk.edgeql  00007-m13xvd4.edgeql  00007-m1x4x4b.edgeql  00008-m13x2hi.edgeql  00008-m1bjegc.edgeql  00009-m1eigvf.edgeql  00010-m1wyf2i.edgeql  00011-m13m72s.edgeql  00012-m1zxp2i.edgeql  00013-m1l4tgg.edgeql  00014-m1nzser.edgeql  00015-m1dbgfz.edgeql  00016-m136vfa.edgeql  00017-m1yiyar.edgeql  00018-m1zrqre.edgeql  00019-m14mgwu.edgeql  00020-m1uz7ah.edgeql  00021-m1vf2zb.edgeql  00022-m1kcafb.edgeql  00023-m13soi3.edgeql  00024-m1wjrot.edgeql  00025-m1efp25.edgeql  00026-m1a7gpn.edgeql  00027-m1ixstp.edgeql
src/agent_mem/: agents.py  gui.py  main.py
src/agent_mem/agents/: extractor.py  talker.py
src/agent_mem/common/: types.py
src/agent_mem/queries/: delete.edgeql  insert.edgeql
src/agent_mem/routers/: agent_api.py  chat_api.py
