[project]
name = "agent-mem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "deepbuzin", email = "contactbuzin@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "gel>=3.0.1",
]

[project.scripts]
agent-mem = "agent_mem:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
