[project]
name = "agent-mem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "deepbuzin", email = "contactbuzin@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "gel",
    "httpx>=0.28.1",
    "pydantic-ai>=0.1.8",
    "python-dotenv>=1.1.0",
    "streamlit>=1.44.1",
]

[project.scripts]
agent-mem = "agent_mem:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
gel = { git = "https://github.com/geldata/gel-python.git" }
